--- a/s/sh/sha/sharelive.net.html
+++ b/s/sh/sha/sharelive.net.html
@@ -1,26 +1,26 @@
-<!--The following is the downloaded HTML source of the sharelive.net privacy policy that was archived on 2013-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130607054142id_/http%3A//sharelive.net/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sharelive.net privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222171049id_/http%3A//sharelive.net/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html itemscope="" itemtype="http://schema.org/Product" xmlns="http://www.w3.org/1999/xhtml" class="notie"><!--<![endif]--><head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="description" content="Please read our Privacy Policy before using iLivid. This Policy details how iLivid receives, collects and uses information in connection with iLivid website.">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-<link rel="canonical" href="http://www.ilivid.com/privacy_policy.php">
+<link rel="canonical" href="http://www.sharelive.net/privacy_policy.php">
 <!-- Plus one button meta tags -->
 <meta itemprop="name" content="Download Manager - Free Download | iLivid">
 <meta itemprop="description" content="iLivid Download Manager gives you the fastest and easiest way to download videos for free. Supports XBMC plug-ins and all popular video formats!">
-<meta itemprop="image" content="http://www.ilivid.com/images/ilivid-logo.jpg">
+<meta itemprop="image" content="http://www.sharelive.net/images/ilivid-logo.jpg">
 <link href="/styles/default/main.css" rel="stylesheet" type="text/css">
 <link href="/styles/default/inner.css" rel="stylesheet" type="text/css">
 		<script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript">
-//<![CDATA[
-    var _rb_appid = null;
-    var _rb_language = "en";
-    var _rb_systemid = "406";
-    var _rb_ga_page_name = "Privacy";
+	//<![CDATA[
+	var _rb_appid = null;
+	var _rb_language = "en";
+	var _rb_systemid = "406";
+	var _rb_ga_page_name = "Privacy";
 
-    var ga_host = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	var ga_host = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src=\""+ga_host+"google-analytics.com/ga.js\" type=\"text/javascript\"%3E%3C/script%3E"));
 
 function ga_track_download(id){
@@ -43,7 +43,7 @@ function send_ga_query(query, ga_account){
     else{
 	   setTimeout(function(){send_ga_query(query, ga_account)}, 1000);
     }
-}    var ml_host = (("https:" == document.location.protocol) ? "https://" : "http://");
+}	var ml_host = (("https:" == document.location.protocol) ? "https://" : "http://");
 var ml_host = ml_host+"www.mlstat.com";
 document.write(unescape("%3Cscript src='"+ml_host+"/scripts/appid.V2.js' type='text/javascript'%3E%3C/script%3E"));
 
@@ -75,12 +75,12 @@ function send_ml_query(_event){
     }
 }
 
-ml_stats_load();    
-    function track_download(id){
-	   send_ml_query('download');
-	   ga_track_download(id);
-    }
-//]]>
+ml_stats_load();
+	function track_download(id) {
+		send_ml_query('download');
+		ga_track_download(id);
+	}
+	//]]>
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script src="https://www.mlstat.com/scripts/appid.V2.js" type="text/javascript"></script>		<link href="/styles/default/main.css" rel="stylesheet" type="text/css">
 <link href="/styles/default/inner.css" rel="stylesheet" type="text/css">
 		<title>Privacy Policy | iLivid.com</title>
@@ -101,7 +101,7 @@ ml_stats_load();
 </div>            <div id="header">
     <ul id="navigation">
 				<li><a href="/">Home</a></li>
-	    		<li><a target="downframe" onclick="track_download('topnavigation')" href="http://download.ilivid.com/iLividSetup.exe">Download</a></li>
+	    		<li><a target="downframe" onclick="track_download('topnavigation')" href="http://download.sharelive.net/iLividSetup.exe">Download</a></li>
 	    		<li><a href="/features.php">Features</a></li>
 	    		<li><a target="_blank" href="http://ilivid.kayako.com/Troubleshooter/List">Support</a></li>
 	        </ul>
@@ -142,15 +142,15 @@ ml_stats_load();
   </form>
 </div>                </div>
                <div id="right">
-                   <a href="http://download.ilivid.com/iLividSetup.exe" target="downframe" onclick="track_download('top')" title="Download iLivid download manager now!" class="download-button"><img src="/styles/default/en/download-button.png" alt="Download iLivid - Free Download Manager and Accelerator"></a>                   <a href="http://download.ilivid.com/iLividSetup.exe" id="download-button-right-legend">Download iLivid FREE!</a>
+                   <a href="http://download.sharelive.net/iLividSetup.exe" target="downframe" onclick="track_download('top')" title="Download iLivid download manager now!" class="download-button"><img src="/styles/default/en/download-button.png" alt="Download iLivid - Free Download Manager and Accelerator"></a>                   <a href="http://download.sharelive.net/iLividSetup.exe" id="download-button-right-legend">Download iLivid FREE!</a>
                    <div id="mcafee-notes">
     <div id="free" class="png">100% Free</div>
     <div id="clean" class="png">100% Clean</div>
 </div>
 <div id="mcafee">
     <!-- START SCANALERT CODE -->
-    <a target="_blank" href="https://www.mcafeesecure.com/RatingVerify?ref=www.ilivid.com&amp;lang=en">
-	<img width="115" height="32" border="0" src="//images.scanalert.com/meter/www.ilivid.com/4.gif">
+    <a target="_blank" href="https://www.mcafeesecure.com/RatingVerify?ref=www.sharelive.net&amp;lang=en">
+	<img width="115" height="32" border="0" src="//images.scanalert.com/meter/www.sharelive.net/4.gif">
     </a>
     <!-- END SCANALERT CODE -->
 </div>               </div>
