--- a/m/ma/man/mandrill.com.html
+++ b/m/ma/man/mandrill.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the mandrill.com privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627224548id_/http%3A//mandrill.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mandrill.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222175158id_/http%3A//www.mandrill.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html class="no-js page-privacy  wf-inactive"><head>
+<!DOCTYPE html><html class=" page-privacy js no-touch rgba backgroundsize no-overflowscrolling sizrizr sizrizr-large sizrizr-xlarge wf-inactive" style=""><head>
     <meta charset="UTF-8">
-    <link href="/assets/css/site-27867d34.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="/assets/css/site-9dad7e4c.css" media="screen" rel="stylesheet" type="text/css">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Privacy Policy - Mandrill</title>
     <meta content="Mandrill is a transactional email platform from MailChimp" name="description">
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//use.typekit.net/naw0mzv.js" type="text/javascript" async=""></script><script src="/assets/scripts/init-15891ec7.js" type="text/javascript"></script>
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//use.typekit.net/naw0mzv.js" type="text/javascript" async=""></script><script src="/assets/scripts/site-718ba5a8.js"></script><script src="/assets/scripts/waypoints-2cb6da76.js"></script><script src="/assets/scripts/init-6de1019c.js" type="text/javascript"></script>
     <script type="text/javascript">
       (function() {
         var config = {
@@ -77,10 +77,13 @@
       <nav class="mainNav">
         <ul>
           <li>
+            <a href="/features/">Features</a>
+          </li>
+          <li>
             <a href="/pricing/">Pricing</a>
           </li>
           <li>
-            <a href="http://mandrillapp.com/api/docs/">API</a>
+            <a href="http://mandrillapp.com/docs/">Docs</a>
           </li>
           <li>
             <a href="http://blog.mandrill.com/">Blog</a>
@@ -202,6 +205,9 @@ Atlanta, GA 30318  </p><p>If you’re not satisfied with our response you can <a
               </li>
               <li>
                 <a href="/copyright">Copyright Policy</a>
+              </li>
+              <li>
+                <a href="http://mandrillapp.com/contact/abuse">Report Abuse</a>
               </li>
             </ul>
           </div>
