--- a/c/cr/cri/criticker.com.html
+++ b/c/cr/cri/criticker.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the criticker.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621220630id_/http%3A//www.criticker.com/index.php%3Fpv) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the criticker.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222180635id_/http%3A//www.criticker.com/index.php%3Fpv) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
  <title>Criticker - Privacy Policy</title>
@@ -53,7 +53,7 @@
   <table id="i_forumblog_news_table" cellspacing="0" cellpadding="0">
   <tbody><tr>
    <td class="i_forumblog_lefttd"><a href="http://www.criticker.com/forum/">the&nbsp;Forum</a></td>
-   <td class="i_forumblog_righttd">→ <a href="http://www.criticker.com/forum/viewtopic.php?f=6&amp;t=4020">The Kumpel</a></td>
+   <td class="i_forumblog_righttd">→ <a href="http://www.criticker.com/forum/viewtopic.php?f=14&amp;t=4273">Inside Lleyn Davis</a></td>
   </tr>
   <tr>
    <td class="i_forumblog_lefttd"><a href="http://www.criticker.com/blog/">the&nbsp;Blog</a></td>
@@ -225,16 +225,7 @@ google_ad_height = 90;
    </tbody></table>
   </div>
  </div>
- <div id="ab_midad_div"><script type="text/javascript"><!--
-google_ad_client = "pub-1580149437633664";
-/* 300x250, created 4/17/11 */
-google_ad_slot = "7853865092";
-google_ad_width = 300;
-google_ad_height = 250;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
+ <div id="ab_midad_div"><a href="http://freebooksifter.com/" target="_blank"><img src="http://random-good-stuff.com/photos/Banners/Sifter-Banner-350"></a></div>
 </div>
  <div class="clear"></div>
 </div>
@@ -251,18 +242,18 @@ google_ad_height = 250;
     <a href="http://api.criticker.com">APIs</a> |
     <a href="http://www.criticker.com/index.php?press">Advertising &amp; Press</a> |
     <a href="http://www.criticker.com/index.php?re">RSS</a> |
-    <a href="http://www.criticker.com/index.php?tc">Terms &amp; Conditions</a><br><em>10,133,000 Movie Rankings and Counting...</em>
+    <a href="http://www.criticker.com/index.php?tc">Terms &amp; Conditions</a><br><em>10,736,000 Movie Rankings and Counting...</em>
    </td>
   </tr>
  </tbody></table><script src="http://static.getclicky.com/70077.js" type="text/javascript"></script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="http://static.getclicky.com/70077-db7.gif"></p></noscript>
 
 <!--
-start load index: 1371852393.74
-begin URL query parsing: 1371852393.74
-end URL query parsing: 1371852393.74
+start load index: 1387735597.34
+begin URL query parsing: 1387735597.34
+end URL query parsing: 1387735597.34
 
-totally done: 1371852393.74
+totally done: 1387735597.35
 -->
 </div>
 
