--- a/f/fu/fun/funeducation.com.html
+++ b/f/fu/fun/funeducation.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the funeducation.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620065404id_/http%3A//www.funeducation.com/Company/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funeducation.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222184204id_/http%3A//www.funeducation.com/Company/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_Head1"><title>
 	FunEducation, Inc. Privacy Statement
 </title><link rel="alternate" type="application/rss+xml" title="FunEducation.com Testing News" href="http://www.funeducation.com/xmlNews/RSS-FunEd/">
-    <script async="" src=" https://sb .scorecardresearch.com/beacon.js"></script><script language="javascript" type="text/javascript" src="/Jscripts/funed1.js"></script>
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src=" https://sb .scorecardresearch.com/beacon.js"></script><script language="javascript" type="text/javascript" src="/Jscripts/funed1.js"></script>
 <link href="../../App_Themes/FunedTheme/TestEngine.css" type="text/css" rel="stylesheet"><style type="text/css">
     .rptheading {font-family:Arial; font-size:11pt; color:#0A77D0; font-weight:bold; }
     .rptheading:link,visited,active {font-family:Arial; font-size:11pt; color:#0A77D0;font-weight:bold; }
@@ -111,7 +111,7 @@
  </td>
  <td valign="top" height="260px" bgcolor="#FFFFFF">
  <form name="aspnetForm" method="post" action="" id="aspnetForm" target="_parent">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTMwNzg3NDY3OQ9kFgJmD2QWAgIBDxYCHgZ0YXJnZXQFB19wYXJlbnRkZDPAMgkhHT8tVo8/YfsfBGki/b1ctabSyurNo1QNpGk6">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTMwNzg3NDY3OQ9kFgJmD2QWAgIBDxYCHgZ0YXJnZXQFB19wYXJlbnRkZKVxAvpd1wfsfOHe2Dd8OsOTf/UilQdzx/TsKTJzN4d1">
 
     <div style="background-color: White; vertical-align: top;" align="left">
         <table width="100%" cellpadding="0" border="0">
@@ -572,13 +572,17 @@
 
 <!-- Start Google Analytics tag -->
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-372995-1");
-pageTracker._initData();
-pageTracker._trackPageview();
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-372995-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 <!-- End Google Analytics tag -->
 
