--- a/f/fl/fld/fldoe.org.html
+++ b/f/fl/fld/fldoe.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fldoe.org privacy policy that was archived on 2013-05-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130517224542id_/http%3A//www.myflorida.com/myflorida/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fldoe.org privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223003650id_/http%3A//www.myflorida.com/myflorida/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>MyFlorida.com - Home Page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -168,12 +168,12 @@ function MM_swapImage() { //v3.0
                 <td><a href="http://www.myflorida.com/portal/mypage" onMouseOut="MM_swapImgRestore()" onblur="MM_swapImgRestore()" onMouseOver="MM_swapImage('mypage','','http://www.myflorida.com/images/p3_nav_mypage_on.gif',1)" onfocus="MM_swapImage('mypage','','http://www.myflorida.com/images/p3_nav_mypage_on.gif',1)"><img src="http://www.myflorida.com/images/p3_nav_mypage.gif" alt="Access a Customized MyFlorida Page" name="mypage" width="190" height="30" border="0"></a></td>
               </tr>
             -->
-              <tr> 
+             <!-- <tr> 
                 <td><img src="http://www.myflorida.com/images/p3_spacer.gif" alt="" width="1" height="1"></td>
               </tr>
               <tr> 
-                <td><a href="http://myflorida.custhelp.com" onmouseout="MM_swapImgRestore()" onblur="MM_swapImgRestore()" onmouseover="MM_swapImage('getanswers','','http://www.myflorida.com/images/p3_nav_getanswers_on.gif',1)" onfocus="MM_swapImage('getanswers','','http://www.myflorida.com/images/p3_nav_getanswers_on.gif',1)"><img src="http://www.myflorida.com/images/p3_nav_getanswers.gif" alt="Get Answers" name="getanswers" width="190" height="30" border="0"></a></td>
-              </tr>              
+                <td><a href="http://myflorida.custhelp.com" onMouseOut="MM_swapImgRestore()" onblur="MM_swapImgRestore()" onMouseOver="MM_swapImage('getanswers','','http://www.myflorida.com/images/p3_nav_getanswers_on.gif',1)" onfocus="MM_swapImage('getanswers','','http://www.myflorida.com/images/p3_nav_getanswers_on.gif',1)"><img src="http://www.myflorida.com/images/p3_nav_getanswers.gif" alt="Get Answers" name="getanswers" width="190" height="30" border="0"></a></td>
+              </tr> --> 
               <tr> 
                 <td> <a name="content1"></a> <a href="#content2"><img src="http://www.myflorida.com/images/p3_spacer.gif" alt="Skip to Center Content" width="2" height="2" border="0"></a> 
                   
@@ -277,8 +277,8 @@ function MM_swapImage() { //v3.0
           <td align="center" class="footer"><a href="http://www.myflorida.com/" class="footerlink">Home</a> 
             | <a href="http://www.myflorida.com/taxonomy/visitor" class="footerlink">Visitor</a> | <a href="http://www.myflorida.com/taxonomy/floridian" class="footerlink">Floridian</a> 
             | <a href="http://www.myflorida.com/taxonomy/business" class="footerlink">Business</a> | <a href="http://www.myflorida.com/taxonomy/government" class="footerlink">Government</a> 
-            | <a href="http://myflorida.custhelp.com" class="footerlink">Get 
-            Answers</a><br>
+            <!--| <a href="http://myflorida.custhelp.com" class="footerlink">Get 
+            Answers</a>--><br>
             <a href="http://www.myflorida.com/myflorida/copyright.html" class="footerlink">Copyright ©2008 
             State of Florida</a> | <a href="http://www.myflorida.com/myflorida/privacy.html" class="footerlink">Privacy 
             Statement</a> | <a href="http://www.myflorida.com/myflorida/accessibility.html" class="footerlink">Accessibility</a><br>
