--- a/c/ch/ch2/ch2m.com.html
+++ b/c/ch/ch2/ch2m.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ch2m.com privacy policy that was archived on 2013-05-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130504165422id_/http%3A//www.ch2m.com/corporate/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ch2m.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223014719id_/http%3A//www.ch2m.com/corporate/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class="cufon-active cufon-ready"><head><title>CH2M&nbsp;HILL - Privacy Policy</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -68,6 +68,7 @@ ID's:
     <li><a href="https://www.twitter.com/ch2mhill" target="_blank"><img src="/corporate/images/twitter.png" width="22" height="23" alt="Follow us on Twitter"></a></li>
     <li><a href="http://www.linkedin.com/company/3739?trk=tyah" target="_blank"><img src="/corporate/images/linkedin.png" width="22" height="23" alt="Network with us on LinkedIn"></a></li>
     <li><a href="https://facebook.com/ch2mhill" target="_blank"><img src="/corporate/images/facebook.png" width="22" height="23" alt="Friend us on Facebook"></a></li>
+    <li><a href="https://plus.google.com/100946294774571422476/posts" target="_blank"><img src="/corporate/images/google+.png" alt="Join us on Google+" border="0"></a></li>
     <li class="last"><a href="http://www.youtube.com/user/ch2mhillpr" target="_blank"><img src="/corporate/images/youtube.png" width="22" height="23" alt="Watch our videos on YouTube"></a></li>
  <li>Current Region: <span class="region"></span> | <a href="/corporate/region_select.asp">Change Region</a></li>
     </ul>   
@@ -76,14 +77,14 @@ ID's:
  	<h1><a href="/corporate/default.asp" target="_self">CH2M HILL</a></h1>
  
  	<ul class="navigation">
-    <li class="nav"><a href="/corporate/default.asp" target="_self" class="home-link">Home</a></li>
+<!--    <li class="nav"><a href="/corporate/default.asp" target="_self" class="home-link">Home</a></li> -->
     <li class="nav"><a href="/corporate/about_us/default.asp" target="_self" class="about_us-link">About Us</a></li>
 	<li class="nav"><a href="/corporate/clients/default.asp" target="_self" class="home-link">Clients</a></li>
     <li class="nav"><a href="#" target="_self" class="markets-link">Markets</a></li>
     <li class="nav"><a href="#" target="_self" class="services-link">Services</a></li>
     <li class="nav"><a href="#" target="_self" class="locations-link">Locations</a></li>
     <li class="nav"><a href="http://newsroom.ch2mhill.com/pr/ch2m/default.aspx" target="_self">News Room</a></li>
-<!--    <li class="nav"><a href="http://www.ch2mhillblogs.com" target="_blank" class="home-link">Blogs</a></li>   -->
+    <li class="nav"><a href="#" target="_self" class="blogs-link">Blogs</a></li>  
     <li class="nav"><a href="http://www.careers.ch2m.com/" target="_blank" class="careers-link">Careers</a></li>
     <li class="nav"><a href="/corporate/contact_us/default.asp" target="_self" class="contact_us-link">Contact Us</a></li>
     <li id="searchhead"><gcse:searchbox-only></gcse:searchbox-only></li>
@@ -179,9 +180,24 @@ ID's:
 	    <li><a href="/corporate/worldwide/middle_east.asp">Middle East/Africa</a></li>
     	<li><a href="/corporate/worldwide/united_states.asp">United States</a></li>
 	</ul>	
+  </div><div class="panels" id="blogs">
+    <h2 class="section_title"><cufon class="cufon cufon-canvas" alt="Blogs" style="width: 60px; height: 23.4px;"><canvas width="81" height="27" style="width: 81px; height: 27px; top: -6px; left: -3px;"></canvas><cufontext>Blogs</cufontext></cufon></h2>
+    <p>Subscribe to our blogs to stay up-to-date with the latest news and thought leaders at CH2M HILL. <a href="http://www.ch2mhillblogs.com">Learn more</a> about our blogs.</p>
+    <ul>
+        <li><a href="http://www.ch2mhillblogs.com/water" target="_blank">Access Water</a></li>
+	    <li><a href="http://www.ch2mhillblogs.com/foundation/blog/" target="_blank">CH2M HILL Foundation</a></li>
+	</ul>
+	<ul>	
+	    <li><a href="http://www.ch2mhill.com/yolles" target="_blank">Yolles</a></li>
+	    <li><a href="http://www.ch2mhillblogs.com/eweek" target="_blank">EWeek</a></li>
+	</ul>
+    <ul>
+	    <li><a href="http://www.ch2mhillblogs.com/elisa" target="_blank">Elisa Speranza's Postcards</a></li>
+	</ul>
   </div>
   
 </div>
+
 
 <script>
   (function() {
@@ -192,7 +208,6 @@ ID's:
     document.body.appendChild(gcse);
   })();
 </script>
-
 
 
 <!-- HEADER INCLUDE -->
@@ -215,7 +230,24 @@ ID's:
     <p>When you view certain parts of this CH2M&nbsp;HILL Internet Web site, information may be stored on the hard drive of your computer. This information may be in the form of a "cookie" or other technologies that will permit the adaptation of the CH2M&nbsp;HILL Internet Web site to better reflect your particular interests, priorities, and preferences.</p>
     <p>A "cookie" is a piece of data that an Internet Web site transfers, via your browser, back to your computer's hard drive or other parts of your computer system to assist CH2M&nbsp;HILL with its general Web site recordkeeping activities.</p>
     <p>Please note that this CH2M&nbsp;HILL Internet Web site contains hyperlinks to other non-CH2M&nbsp;HILL Internet Web sites and CH2M&nbsp;HILL does not control or monitor the privacy policies of those sites.</p>
-    <p>This CH2M&nbsp;HILL Privacy Statement only applies to information collected and maintained by CH2M&nbsp;HILL. CH2M&nbsp;HILL reserves the right to modify this Privacy Statement at any time by updating this Privacy Statement Web page. This Privacy Statement was last updated on January 21, 2010. Questions regarding this policy statement should be directed to: <a href="mailto:stuart.crenshaw@ch2m.com">stuart.crenshaw@ch2m.com</a>.</p>
+    <p>This CH2M&nbsp;HILL Privacy Statement only applies to information collected and maintained by CH2M&nbsp;HILL. CH2M&nbsp;HILL reserves the right to modify this Privacy Statement at any time by updating this Privacy Statement Web page. This Privacy Statement was last updated on January 21, 2010. Questions regarding this policy statement should be directed to:
+    <script type="text/javascript">
+<!-- 
+// protected email script by Joe Maller
+// JavaScripts available at http://www.joemaller.com
+// this script is free to use and distribute
+// but please credit me and/or link to my site
+
+emailE='ch2m.com'
+emailE=('William' + '.' + 'Brierly' + '@' + emailE)
+document.write('<A href="mailto:' + emailE + '">' + emailE +'</a>')
+ //-->
+</script><a href="mailto:William.Brierly@ch2m.com">William.Brierly@ch2m.com</a>.
+
+<noscript>
+    <em>This email address is protected by JavaScript.<BR>
+    Please enable JavaScript to contact us.</em>
+</noscript></p>
 
 </div>
   <!-- end CONTENT WRAPPER -->
@@ -227,14 +259,14 @@ ID's:
 <!-- FOOTER -->
 <div id="footer">
 <ul class="navigation">
-    <li class="nav"><a href="/corporate/default.asp" target="_self" class="home-link">Home</a></li>
+<!--    <li class="nav"><a href="/corporate/default.asp" target="_self" class="home-link">Home</a></li>-->
     <li class="nav"><a href="/corporate/about_us/default.asp" target="_self">About Us</a></li>
 	<li class="nav"><a href="/corporate/clients/default.asp" target="_self">Clients</a></li>
     <li class="nav"><a href="/corporate/markets/default.asp" target="_self">Markets</a></li>
     <li class="nav"><a href="/corporate/services/default.asp" target="_self">Services</a></li>
     <li class="nav"><a href="/corporate/worldwide/default.asp" target="_self">Locations</a></li>
     <li class="nav"><a href="http://newsroom.ch2mhill.com/pr/ch2m/default.aspx" target="_self">News Room</a></li>
-<!--    <li class="nav"><a href="http://www.ch2mhillblogs.com" target="_blank" class="home-link">Blogs</a></li>  -->
+    <li class="nav"><a href="http://www.ch2mhillblogs.com" target="_blank" class="home-link" onclick="_gaq.push(['_link', 'http://www.ch2mhillblogs.com']); return false;">Blogs</a></li>  
     <li class="nav"><a href="http://www.careers.ch2m.com/" target="_blank">Careers</a></li>
     <li class="nav end"><a href="/corporate/contact_us/default.asp" target="_self">Contact Us</a></li>
     <li class="nav end" id="searchfoot"><gcse:searchbox-only></gcse:searchbox-only></li>
@@ -249,6 +281,19 @@ ID's:
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>-->
 <script type="text/javascript" src="/corporate/js/ie6.js"></script> 
+<script src="/corporate/js/jquery.zrssfeed.js" type="text/javascript"></script>
+
+
+<!-- NEWS -->
+ <script src="/corporate/js/jquery.zrssfeed.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(document).ready(function () {
+  $('#releases').rssfeed('http://feeds.feedburner.com/CH2M-HILL-News-Room', {
+    limit: 3
+  });
+});
+</script>
+<!-- end NEWS -->
 
 
 <!-- NAV DROP DOWNS -->
